# phonetic

./: .gitignore  Cargo.toml  README.md
src/: main.rs  phonetic.rs  phonetic_tests.rs  textutil.rs
