[package]
name = "phonetic"
version = "0.1.0"
authors = ["Ramiro Salas <ramiro@ramirosalas.com>"]
edition = "2018"
license = "Apache 2.0"
readme = "README.md"
keywords = ["nato", "alphabet", "text"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
